calc more summary stats and visualize plot

--- a/notebooks/3.0-dj-test-model-implementation.ipynb
+++ b/notebooks/3.0-dj-test-model-implementation.ipynb
@@ -32,11 +32,10 @@
     "    Returns:\n",
     "    float: The calculated lending value.\n",
     "    \"\"\"\n",
-    "\n",
-    "    # calculate the inverse CDF of the standard normal distribution for epsilon\n",
+    "    # calc the inverse CDF of the standard normal distribution for epsilon\n",
     "    z_epsilon = norm.ppf(epsilon)\n",
     "\n",
-    "    # calculate LV\n",
+    "    # calc LV\n",
     "    num = (1 - alpha) * np.exp((mu - sigma**2 / 2) * delta + sigma * np.sqrt(delta) * z_epsilon)\n",
     "    denom = 1 - alpha * np.exp((mu - sigma**2 / 2) * delta + sigma * np.sqrt(delta) * z_epsilon)\n",
     "    lv = num / denom\n",
@@ -59,11 +58,10 @@
     "    Returns:\n",
     "    float: The liquidity-adjusted lending value.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # calculate the inverse CDF of the standard normal distribution for epsilon\n",
+    "    # calc the inverse CDF of the standard normal distribution for epsilon\n",
     "    z_epsilon = norm.ppf(epsilon)\n",
     "\n",
-    "    # calculate the liquidity-adjusted LV\n",
+    "    # calc the liquidity-adjusted LV\n",
     "    num = (1 - alpha) * np.exp(-gamma * x + (mu - sigma**2 / 2) * delta + sigma * np.sqrt(delta) * z_epsilon)\n",
     "    denom = 1 - alpha * np.exp(-gamma * x + (mu - sigma**2 / 2) * delta + sigma * np.sqrt(delta) * z_epsilon)\n",
     "    liq_lv = num / denom\n",
