--- a/notebooks/3.1-dj-initial-model-visualization.ipynb
+++ b/notebooks/3.1-dj-initial-model-visualization.ipynb
@@ -11,15 +11,330 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_bulk_risk(df):\n",
+    "    \"\"\"\n",
+    "    Calculates the Bulk Risk Indicator for a set of stocks.\n",
+    "\n",
+    "    Args:\n",
+    "    df (pandas DataFrame): DataFrame containing the columns 'ADTV', 'Avg MC'.\n",
+    "\n",
+    "    Returns:\n",
+    "    pandas Series: A Series with the Bulk Risk Indicator for each stock.\n",
+    "    \"\"\"\n",
+    "    # calc 5 times the ADTV for each stock\n",
+    "    five_times_adtv = df['ADTV'] * 5\n",
+    "\n",
+    "    # calc the no. of stocks corresponding to 3% of the MC\n",
+    "    three_percent_mc = df['Avg MC'] * 0.03 / df['Avg Close']\n",
+    "\n",
+    "    # calc min of the two values\n",
+    "    bulk_risk_indicator = pd.DataFrame({'5xADTV': five_times_adtv, '3%MC': three_percent_mc}).min(axis=1)\n",
+    "\n",
+    "    return bulk_risk_indicator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Company Name</th>\n",
+       "      <th>Avg MC</th>\n",
+       "      <th>Avg Close</th>\n",
+       "      <th>Avg Bid</th>\n",
+       "      <th>Avg Ask</th>\n",
+       "      <th>ADTV</th>\n",
+       "      <th>Bulk Risk Indicator</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ABBN</td>\n",
+       "      <td>Abb Ltd</td>\n",
+       "      <td>7.224162e+10</td>\n",
+       "      <td>38.438814</td>\n",
+       "      <td>38.430678</td>\n",
+       "      <td>38.443390</td>\n",
+       "      <td>3.117397e+06</td>\n",
+       "      <td>1.558699e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CLN</td>\n",
+       "      <td>Clariant AG</td>\n",
+       "      <td>3.790858e+09</td>\n",
+       "      <td>11.337797</td>\n",
+       "      <td>11.331864</td>\n",
+       "      <td>11.343051</td>\n",
+       "      <td>9.777089e+05</td>\n",
+       "      <td>4.888544e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DOKA</td>\n",
+       "      <td>Dormakaba Holding AG</td>\n",
+       "      <td>1.870050e+09</td>\n",
+       "      <td>444.389831</td>\n",
+       "      <td>444.076271</td>\n",
+       "      <td>444.703390</td>\n",
+       "      <td>4.409932e+03</td>\n",
+       "      <td>2.204966e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GIVN</td>\n",
+       "      <td>Givaudan SA</td>\n",
+       "      <td>3.331868e+10</td>\n",
+       "      <td>3613.237288</td>\n",
+       "      <td>3612.220339</td>\n",
+       "      <td>3613.694915</td>\n",
+       "      <td>1.869014e+04</td>\n",
+       "      <td>9.345068e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KUD</td>\n",
+       "      <td>Kudelski SA</td>\n",
+       "      <td>6.584905e+07</td>\n",
+       "      <td>1.286949</td>\n",
+       "      <td>1.277119</td>\n",
+       "      <td>1.304237</td>\n",
+       "      <td>6.600285e+04</td>\n",
+       "      <td>3.300142e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>LISN</td>\n",
+       "      <td>Chocoladefabriken Lindt &amp; Spruengli AG</td>\n",
+       "      <td>1.453010e+10</td>\n",
+       "      <td>108298.305085</td>\n",
+       "      <td>107949.152542</td>\n",
+       "      <td>108413.559322</td>\n",
+       "      <td>1.026271e+02</td>\n",
+       "      <td>5.131356e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>LONN</td>\n",
+       "      <td>Lonza Group AG</td>\n",
+       "      <td>3.091884e+10</td>\n",
+       "      <td>418.983051</td>\n",
+       "      <td>418.901695</td>\n",
+       "      <td>419.050847</td>\n",
+       "      <td>2.393532e+05</td>\n",
+       "      <td>1.196766e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NESN</td>\n",
+       "      <td>Nestle SA</td>\n",
+       "      <td>2.580040e+11</td>\n",
+       "      <td>96.601017</td>\n",
+       "      <td>96.595254</td>\n",
+       "      <td>96.609492</td>\n",
+       "      <td>3.676267e+06</td>\n",
+       "      <td>1.838133e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>SCHN</td>\n",
+       "      <td>Schindler Holding AG</td>\n",
+       "      <td>1.407383e+10</td>\n",
+       "      <td>210.445763</td>\n",
+       "      <td>210.284746</td>\n",
+       "      <td>210.516949</td>\n",
+       "      <td>2.383359e+04</td>\n",
+       "      <td>1.191680e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>SCMN</td>\n",
+       "      <td>Swisscom AG</td>\n",
+       "      <td>2.644564e+10</td>\n",
+       "      <td>510.242373</td>\n",
+       "      <td>510.150847</td>\n",
+       "      <td>510.376271</td>\n",
+       "      <td>8.610905e+04</td>\n",
+       "      <td>4.305453e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>SIKA</td>\n",
+       "      <td>Sika AG</td>\n",
+       "      <td>4.053589e+10</td>\n",
+       "      <td>250.838983</td>\n",
+       "      <td>250.783051</td>\n",
+       "      <td>250.896610</td>\n",
+       "      <td>2.944247e+05</td>\n",
+       "      <td>1.472123e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>SRENH</td>\n",
+       "      <td>Swiss Re AG</td>\n",
+       "      <td>3.213975e+10</td>\n",
+       "      <td>101.645593</td>\n",
+       "      <td>101.622034</td>\n",
+       "      <td>101.660678</td>\n",
+       "      <td>8.196646e+05</td>\n",
+       "      <td>4.098323e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>UBSG</td>\n",
+       "      <td>UBS Group AG</td>\n",
+       "      <td>8.868002e+10</td>\n",
+       "      <td>25.531864</td>\n",
+       "      <td>25.525763</td>\n",
+       "      <td>25.535932</td>\n",
+       "      <td>6.549273e+06</td>\n",
+       "      <td>3.274636e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>UHR</td>\n",
+       "      <td>Swatch Group AG</td>\n",
+       "      <td>6.146653e+09</td>\n",
+       "      <td>211.261017</td>\n",
+       "      <td>211.226271</td>\n",
+       "      <td>211.328814</td>\n",
+       "      <td>1.652034e+05</td>\n",
+       "      <td>8.260169e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>VLRT</td>\n",
+       "      <td>Valartis Group AG</td>\n",
+       "      <td>3.785213e+07</td>\n",
+       "      <td>12.093182</td>\n",
+       "      <td>11.042241</td>\n",
+       "      <td>11.981356</td>\n",
+       "      <td>2.366591e+02</td>\n",
+       "      <td>1.183295e+03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Ticker                            Company Name        Avg MC  \\\n",
+       "0    ABBN                                 Abb Ltd  7.224162e+10   \n",
+       "1     CLN                             Clariant AG  3.790858e+09   \n",
+       "2    DOKA                    Dormakaba Holding AG  1.870050e+09   \n",
+       "3    GIVN                             Givaudan SA  3.331868e+10   \n",
+       "4     KUD                             Kudelski SA  6.584905e+07   \n",
+       "5    LISN  Chocoladefabriken Lindt & Spruengli AG  1.453010e+10   \n",
+       "6    LONN                          Lonza Group AG  3.091884e+10   \n",
+       "7    NESN                               Nestle SA  2.580040e+11   \n",
+       "8    SCHN                    Schindler Holding AG  1.407383e+10   \n",
+       "9    SCMN                             Swisscom AG  2.644564e+10   \n",
+       "10   SIKA                                 Sika AG  4.053589e+10   \n",
+       "11  SRENH                             Swiss Re AG  3.213975e+10   \n",
+       "12   UBSG                            UBS Group AG  8.868002e+10   \n",
+       "13    UHR                         Swatch Group AG  6.146653e+09   \n",
+       "14   VLRT                       Valartis Group AG  3.785213e+07   \n",
+       "\n",
+       "        Avg Close        Avg Bid        Avg Ask          ADTV  \\\n",
+       "0       38.438814      38.430678      38.443390  3.117397e+06   \n",
+       "1       11.337797      11.331864      11.343051  9.777089e+05   \n",
+       "2      444.389831     444.076271     444.703390  4.409932e+03   \n",
+       "3     3613.237288    3612.220339    3613.694915  1.869014e+04   \n",
+       "4        1.286949       1.277119       1.304237  6.600285e+04   \n",
+       "5   108298.305085  107949.152542  108413.559322  1.026271e+02   \n",
+       "6      418.983051     418.901695     419.050847  2.393532e+05   \n",
+       "7       96.601017      96.595254      96.609492  3.676267e+06   \n",
+       "8      210.445763     210.284746     210.516949  2.383359e+04   \n",
+       "9      510.242373     510.150847     510.376271  8.610905e+04   \n",
+       "10     250.838983     250.783051     250.896610  2.944247e+05   \n",
+       "11     101.645593     101.622034     101.660678  8.196646e+05   \n",
+       "12      25.531864      25.525763      25.535932  6.549273e+06   \n",
+       "13     211.261017     211.226271     211.328814  1.652034e+05   \n",
+       "14      12.093182      11.042241      11.981356  2.366591e+02   \n",
+       "\n",
+       "    Bulk Risk Indicator  \n",
+       "0          1.558699e+07  \n",
+       "1          4.888544e+06  \n",
+       "2          2.204966e+04  \n",
+       "3          9.345068e+04  \n",
+       "4          3.300142e+05  \n",
+       "5          5.131356e+02  \n",
+       "6          1.196766e+06  \n",
+       "7          1.838133e+07  \n",
+       "8          1.191680e+05  \n",
+       "9          4.305453e+05  \n",
+       "10         1.472123e+06  \n",
+       "11         4.098323e+06  \n",
+       "12         3.274636e+07  \n",
+       "13         8.260169e+05  \n",
+       "14         1.183295e+03  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(os.path.join('..', 'data', 'processed', 'summary_data.csv'))\n",
+    "df['Bulk Risk Indicator'] = calc_bulk_risk(df)\n",
+    "\n",
+    "display(df)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "riskmanagement",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
