estimate visualizations and prelim app

--- a/notebooks/3.0-dj-test-model-implementation.ipynb
+++ b/notebooks/3.0-dj-test-model-implementation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Imports and Functions\n",
     "\n",
-    "We begin by loading the necessary packages/modules and define functions that calculates lending values."
+    "We begin by loading the necessary packages/modules and define a function that calculates lending values."
    ]
   },
   {
@@ -18,31 +18,7 @@
     "import numpy as np\n",
     "from scipy.stats import norm\n",
     "\n",
-    "def calc_LV(mu, sigma, delta, epsilon, alpha):\n",
-    "    \"\"\"\n",
-    "    Calculate the lending value.\n",
-    "\n",
-    "    Args:\n",
-    "    mu (float): Expected return.\n",
-    "    sigma (float): Volatility of the asset, calculated as the standard deviation of historical asset returns.\n",
-    "    delta (float): The response period given to the client to adjust their position after a margin call.\n",
-    "    epsilon (float): The risk tolerance level, representing the maximum probability of the collateral value falling below the client exposure.\n",
-    "    alpha (float): The threshold level for the margin call.\n",
-    "\n",
-    "    Returns:\n",
-    "    float: The calculated lending value.\n",
-    "    \"\"\"\n",
-    "    # calc the inverse CDF of the standard normal distribution for epsilon\n",
-    "    z_epsilon = norm.ppf(epsilon)\n",
-    "\n",
-    "    # calc LV\n",
-    "    num = (1 - alpha) * np.exp((mu - sigma**2 / 2) * delta + sigma * np.sqrt(delta) * z_epsilon)\n",
-    "    denom = 1 - alpha * np.exp((mu - sigma**2 / 2) * delta + sigma * np.sqrt(delta) * z_epsilon)\n",
-    "    lv = num / denom\n",
-    "\n",
-    "    return lv\n",
-    "\n",
-    "def calc_liq_LV(mu, sigma, delta, epsilon, alpha, x, gamma):\n",
+    "def calc_lv(mu, sigma, delta, epsilon, alpha, x, gamma):\n",
     "    \"\"\"\n",
     "    Calculate the liquidity-adjusted lending value.\n",
     "\n",
@@ -75,7 +51,7 @@
    "source": [
     "## Testing the Model Using Literature Values\n",
     "\n",
-    "We then implement the model and test it for accuracy using results in the literature (Juri, 2014). We find that the results align closely enough with those shown in the paper."
+    "We then implement the model and test it for accuracy using results in the literature ([`Juri, 2014`](<..\\references\\Juri, Alessandro (2014) Lending Values and Liquidity Risk.txt>)). We find that the results align closely enough with those shown in the paper and move forward with implementation."
    ]
   },
   {
@@ -113,12 +89,12 @@
     "lit_y = 0.8581 # Literature value for liquidity-adj LV for size y\n",
     "lit_lv = 0.9122 # Literature value for standard LV\n",
     "\n",
-    "# calculate lending values\n",
-    "lv = calc_LV(mu, sigma, delta, epsilon, alpha)\n",
-    "liq_lv_x = calc_liq_LV(mu, sigma, delta, epsilon, alpha, x, gamma)\n",
-    "liq_lv_y = calc_liq_LV(mu, sigma, delta, epsilon, alpha, y, gamma)\n",
+    "# calc lending values\n",
+    "lv = calc_lv(mu, sigma, delta, epsilon, alpha, 0, gamma) # x = 0 for unadjusted lv\n",
+    "liq_lv_x = calc_lv(mu, sigma, delta, epsilon, alpha, x, gamma)\n",
+    "liq_lv_y = calc_lv(mu, sigma, delta, epsilon, alpha, y, gamma)\n",
     "\n",
-    "# calculate percentage differnces from literature values\n",
+    "# calc % diff from literature values\n",
     "diff_lv = (lv - lit_lv) / lit_lv\n",
     "diff_x = (liq_lv_x - lit_x) / lit_x\n",
     "diff_y = (liq_lv_y - lit_y) / lit_y\n",
@@ -170,12 +146,12 @@
     "lit_y = 0.6525 # Literature value for liquidity-adj LV for size y\n",
     "lit_lv = 0.8805 # Literature value for standard LV\n",
     "\n",
-    "# calculate lending values\n",
-    "lv = calc_LV(mu, sigma, delta, epsilon, alpha)\n",
-    "liq_lv_x = calc_liq_LV(mu, sigma, delta, epsilon, alpha, x, gamma)\n",
-    "liq_lv_y = calc_liq_LV(mu, sigma, delta, epsilon, alpha, y, gamma)\n",
+    "# calc lending values\n",
+    "lv = calc_lv(mu, sigma, delta, epsilon, alpha, 0, gamma)\n",
+    "liq_lv_x = calc_lv(mu, sigma, delta, epsilon, alpha, x, gamma)\n",
+    "liq_lv_y = calc_lv(mu, sigma, delta, epsilon, alpha, y, gamma)\n",
     "\n",
-    "# calculate percentage differences from literature values\n",
+    "# calc % diff from literature values\n",
     "diff_lv = (lv - lit_lv) / lit_lv\n",
     "diff_x = (liq_lv_x - lit_x) / lit_x\n",
     "diff_y = (liq_lv_y - lit_y) / lit_y\n",
