--- a/notebooks/2.1-dj-parameter-results.ipynb
+++ b/notebooks/2.1-dj-parameter-results.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -453,15 +453,15 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th>Ticker</th>\n",
        "      <th>Date</th>\n",
-       "      <th>ABBN</th>\n",
-       "      <th>CLN</th>\n",
-       "      <th>DOKA</th>\n",
-       "      <th>GIVN</th>\n",
-       "      <th>KUD</th>\n",
-       "      <th>LISN</th>\n",
-       "      <th>LONN</th>\n",
-       "      <th>NESN</th>\n",
-       "      <th>SCHN</th>\n",
+       "      <th>ABBN_Daily</th>\n",
+       "      <th>CLN_Daily</th>\n",
+       "      <th>DOKA_Daily</th>\n",
+       "      <th>GIVN_Daily</th>\n",
+       "      <th>KUD_Daily</th>\n",
+       "      <th>LISN_Daily</th>\n",
+       "      <th>LONN_Daily</th>\n",
+       "      <th>NESN_Daily</th>\n",
+       "      <th>SCHN_Daily</th>\n",
        "      <th>...</th>\n",
        "      <th>LISN_Avg</th>\n",
        "      <th>LONN_Avg</th>\n",
@@ -1898,7 +1898,7 @@
        "</div>"
       ],
       "text/plain": [
-       "Ticker       Date          ABBN           CLN          DOKA          GIVN  \\\n",
+       "Ticker       Date    ABBN_Daily     CLN_Daily    DOKA_Daily    GIVN_Daily  \\\n",
        "0      2023-12-21  1.021534e-10  4.062741e-10  5.072722e-08  1.744112e-08   \n",
        "1      2023-12-22  7.511271e-11  7.127582e-10  6.053584e-08  1.695420e-08   \n",
        "2      2023-12-27  7.792762e-11  3.451134e-10  9.394500e-08  1.578136e-08   \n",
@@ -1959,7 +1959,7 @@
        "57     2024-03-15  2.836692e-11  2.718256e-10  2.263291e-08  1.467180e-08   \n",
        "58     2024-03-18  2.261484e-11  8.119226e-11  5.973144e-08  5.111193e-09   \n",
        "\n",
-       "Ticker           KUD          LISN          LONN          NESN          SCHN  \\\n",
+       "Ticker     KUD_Daily    LISN_Daily    LONN_Daily    NESN_Daily    SCHN_Daily  \\\n",
        "0       4.670459e-07  4.785544e-06  1.578303e-09  3.089278e-11  1.983773e-08   \n",
        "1       3.049259e-08  2.671529e-06  2.159203e-09  5.528292e-11  1.180879e-07   \n",
        "2       2.240249e-08  9.262422e-06  8.191345e-10  4.434086e-11  1.476918e-08   \n",
@@ -2179,7 +2179,7 @@
     "daily_gamma = df.pivot(index='Date', columns='Ticker', values='Gamma Estimate')\n",
     "\n",
     "# merge\n",
-    "merged_df = pd.concat([daily_gamma, pivot_30d.add_suffix('_30d_MA'), pivot_cum_avg.add_suffix('_Expanding_Avg'), pivot_avg.add_suffix('_Avg')], axis=1)\n",
+    "merged_df = pd.concat([daily_gamma.add_suffix('_Daily'), pivot_30d.add_suffix('_30d_MA'), pivot_cum_avg.add_suffix('_Expanding_Avg'), pivot_avg.add_suffix('_Avg')], axis=1)\n",
     "merged_df.reset_index(inplace=True)\n",
     "\n",
     "# display and save\n",
