more app and visualizations

--- a/notebooks/3.1-dj-initial-model-visualization.ipynb
+++ b/notebooks/3.1-dj-initial-model-visualization.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "\n",
     "    return bulk_risk_indicator, indicator_type\n",
     "\n",
-    "def plot_x_lv(ax):\n",
+    "def plot_x_lv(ax, df):\n",
     "    \"\"\"\n",
     "    Plots liquidity-adjusted Lending Value (LV) as a function of the number of stocks for each ticker.\n",
     "\n",
@@ -129,7 +129,7 @@
     "\n",
     "    ax.legend(loc='upper right')\n",
     "\n",
-    "def plot_exp_lv(ax):\n",
+    "def plot_exp_lv(ax, df):\n",
     "    \"\"\"\n",
     "    Plots liquidity-adjusted Lending Value (LV) as a function of the exposure (CHF) for each ticker.\n",
     "\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -713,8 +713,8 @@
     "# plot\n",
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(18, 6))\n",
     "\n",
-    "plot_x_lv(ax1)\n",
-    "plot_exp_lv(ax2)\n",
+    "plot_x_lv(ax1, df)\n",
+    "plot_exp_lv(ax2, df)\n",
     "\n",
     "plt.savefig(os.path.join('..', 'reports', 'figures', 'lv_curve.svg'), bbox_inches='tight')\n",
     "plt.show()"
