--- a/notebooks/1.1-dj-summary-data.ipynb
+++ b/notebooks/1.1-dj-summary-data.ipynb
@@ -1310,7 +1310,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "riskmanagement",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1324,9 +1324,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
