--- a/notebooks/2.1-dj-parameter-results.ipynb
+++ b/notebooks/2.1-dj-parameter-results.ipynb
@@ -2190,7 +2190,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "riskmanagement",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2204,9 +2204,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
