--- a/notebooks/3.0-dj-test-model-implementation.ipynb
+++ b/notebooks/3.0-dj-test-model-implementation.ipynb
@@ -171,7 +171,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "riskmanagement",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -185,9 +185,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
