--- a/notebooks/3.1-dj-initial-model-visualization.ipynb
+++ b/notebooks/3.1-dj-initial-model-visualization.ipynb
@@ -723,7 +723,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "riskmanagement",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -737,9 +737,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
